--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/mbr-favicon.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>derat-pro.com</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/simple-line-icons/simple-line-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+    <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -42,23 +43,17 @@
                             fill: rgb(158, 158, 158);
                         "></span>
                     <div class="widget-content display-4">
-                        <p class="location-title mbr-fonts-style display-4">
-                            4020 New York, Street 52-37
-                        </p>
+                        <p class="location-title mbr-fonts-style display-4">233 Rue du Faubourg Saint-Martin, 75 Paris</p>
                     </div>
                 </div>
             </div>
 
             <div class="menu-content-right">
                 <div class="info-widget">
-                    <span class="widget-icon mbr-iconfont mobi-mbri-letter mobi-mbri" style="
-                            color: rgb(158, 158, 158);
-                            fill: rgb(158, 158, 158);
-                        "></span>
+                    <a href="https://g.page/r/CTExSyJD_fzsEB0/review" target="_blank"><span class="widget-icon mbr-iconfont sli-social-google" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span></a>
                     <div class="widget-content display-4">
-                        <p class="widget-title mbr-fonts-style display-4">
-                            info@site.com
-                        </p>
+                        <p class="widget-title mbr-fonts-style display-4"><strong>
+                            <a href="https://g.page/r/CTExSyJD_fzsEB0/review" class="text-primary" target="_blank">vos avis</a></strong></p>
                     </div>
                 </div>
                 <div class="info-widget">
@@ -68,8 +63,7 @@
                         "></span>
                     <div class="widget-content display-4">
                         <p class="widget-title mbr-fonts-style display-4">
-                            +(800) 456 8824
-                        </p>
+                            <a href="tel:+33-186983380" class="text-primary">+33-186983380</a></p>
                     </div>
                 </div>
 
@@ -116,7 +110,7 @@
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+      <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
