--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -84,7 +84,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-black text-primary display-4" href="https://deratpro.com">&nbsp;ATTENTION AUX CONTREFACONS IL N'EXISTE QU'UN SEUL DERATPRO</a>
+                        <a class="nav-link link mbr-black text-black text-primary display-4" href="https://deratpro.com">&nbsp;ATTENTION AUX CONTREFACONS IL N'EXISTE QU'UN SEUL DERATPRO.com&nbsp;</a>
                     </li></ul>
 
                 
@@ -110,7 +110,7 @@
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
-      <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
